Fix CommandTree, fix command registration